--- a/backend/public/wizard_plus.html
+++ b/backend/public/wizard_plus.html
@@ -10,10 +10,11 @@
     .bubble { border-radius: 1rem; padding: 0.75rem 1rem; }
     .bubble.user { background: #233055; color: #fff; }
     .bubble.bot { background: #0f172a; color: #e2e8f0; border: 1px solid #334155; }
-    .btn { background: #4f46e5; color: #fff; padding: 0.5rem 0.9rem; border-radius: 0.75rem; }
+    .btn { background: #4f46e5; color: #fff; padding: 0.6rem 1rem; border-radius: 0.75rem; }
     .btn:disabled { opacity: 0.6; cursor: not-allowed; }
-    .field { background: #0f172a; border: 1px solid #334155; color: #e2e8f0; border-radius: 0.75rem; padding: 0.5rem 0.75rem; }
+    .field { background: #0f172a; border: 1px solid #334155; color: #e2e8f0; border-radius: 0.75rem; padding: 0.6rem 0.75rem; }
     .hidden { display: none; }
+    .hint { font-size: 0.85rem; opacity: .7; }
   </style>
 </head>
 <body class="min-h-screen text-slate-100">
@@ -26,16 +27,17 @@
     <main class="mt-6 space-y-4">
       <div id="chat" class="space-y-3">
         <div class="bubble bot">
-          כתבו בשפה חופשית מה תרצו שאעשה עבורכם. אני אבקש פרטים שחסרים ואז אריץ אוטומציה.
+          כתבו בשפה חופשית מה תרצו שאעשה עבורכם. אני אשאל פרטים חסרים ואבצע.
         </div>
       </div>
 
       <div class="flex gap-2">
-        <input id="freeText" class="field flex-1" placeholder="לדוגמה: כל מייל מחודש אחרון ממיכל שלא נענה 10 שעות → הכנס ל-SLA" />
+        <input id="freeText" class="field flex-1" placeholder="דוגמה: כל מייל מחודש אחרון ממיכל שלא נענה 10 שעות → הכנס ל-Google Sheet" />
         <button id="btnPlan" class="btn">תכנן</button>
         <button id="btnRun" class="btn" disabled>הרץ</button>
       </div>
 
+      <!-- כאן נציג שדות חסרים בצורה ידידותית -->
       <div id="missingFields" class="grid gap-3 md:grid-cols-2"></div>
     </main>
   </div>
@@ -111,16 +113,14 @@
             <input class="field w-full" data-key="row.cc" placeholder="cc" value="{{item.cc}}" />
             <input class="field w-full" data-key="row.labels" placeholder="labels" value="{{item.labels}}" />
           </div>
-          <div class="text-xs opacity-70">
-            טיפ: הפלייסהולדרים {{item.*}} יוחלפו אוטומטית מערכי המייל (from, subject, date, webLink, threadId, snippet, to, cc, labels).
-          </div>
+          <div class="hint">טיפ: הפלייסהולדרים {{item.*}} יוחלפו אוטומטית מערכי המייל.</div>
         `;
         missingFields.appendChild(wrap);
       }
 
-      // שאר השדות
+      // שדות אחרים
       missing.forEach(m => {
-        if (m.key === 'row') return; // כבר טופל
+        if (m.key === 'row') return;
         const wrap = document.createElement('div');
         wrap.className = 'space-y-1';
         wrap.innerHTML = `
@@ -146,13 +146,12 @@
         const j = await r.json();
         if (!j.ok) throw new Error(j.error || 'PLAN_FAILED');
 
-        // לא מציגים JSON—רק שדות נחמדים
         lastPlan = j.proposal || [];
         lastMissing = j.missing || [];
         lastText = text;
 
         if (lastMissing.length) {
-          addBubble('צריך להשלים כמה פרטים. מלא/י את השדות ולחץ/י "הרץ".');
+          addBubble('כמעט סיימנו! חסרים עוד כמה פרטים קטנים ↓');
           renderMissing(lastMissing);
           btnRun.disabled = false;
         } else {
@@ -187,30 +186,22 @@
         const copy = JSON.parse(JSON.stringify(s));
 
         if (copy.trigger?.params) {
-          // הזרקת כל מה שמולא לשדות ה-trigger
           for (const [k, v] of Object.entries(filled)) {
-            if (copy.trigger.params[k] === undefined) {
-              copy.trigger.params[k] = v;
-            }
+            if (copy.trigger.params[k] === undefined) copy.trigger.params[k] = v;
           }
         }
         if (copy.action?.params) {
-          // normalize spreadsheet → spreadsheetId
           if (copy.action.params.spreadsheet && !copy.action.params.spreadsheetId) {
             copy.action.params.spreadsheetId = copy.action.params.spreadsheet;
             delete copy.action.params.spreadsheet;
           }
-          // הזרקה כוללת + row חכם
           for (const [k, v] of Object.entries(filled)) {
             if (k === 'row') continue;
-            if (copy.action.params[k] === undefined) {
-              copy.action.params[k] = v;
-            }
+            if (copy.action.params[k] === undefined) copy.action.params[k] = v;
           }
           if (filled.row) {
             copy.action.params.row = filled.row;
           } else if (!copy.action.params.row) {
-            // ברירת מחדל נוחה
             copy.action.params.row = {
               from: "{{item.from}}",
               subject: "{{item.subject}}",
@@ -243,7 +234,7 @@
           }
           throw new Error(j.error || 'EXECUTION_FAILED');
         }
-        addBubble('בוצע! בדקו את הגיליון/היעד.');
+        addBubble('בוצע! בדקו את הגיליון/היעד ✅');
       } catch (e) {
         console.error(e);
         addBubble('שגיאה בהרצה. נסו שוב.');
